--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    background-color: #DDD1C7;
 }
 
 .navbar {
@@ -58,6 +59,14 @@ h1 {
     margin: 0;
 }
 
+h2, h3, h4, h5, h6 {
+    color: #564256;
+}
+
+section h1 {
+    color: #564256;
+}
+
 main {
     padding: 0 3em;
 }
@@ -71,6 +80,12 @@ section {
     padding-bottom: 1.5em;
     border: solid #DDD1C7 2px;
     background-color: #DDD1C7;
-    margin: 3em;
     border-radius: 0.5em;
+}
+
+footer {
+    background-color: #564256;
+    color: #DDD1C7;
+    padding: 1em;
+    text-align: center;
 }
