--- a/css/main.css
+++ b/css/main.css
@@ -50,21 +50,8 @@ header .navbar__menu li a:hover {
 }
 
 p.section__info {
-    margin-bottom: 2em;
-}
-
-h1 {
-    font-weight: bold;
-    font-size: 30px;
     margin: 0;
-}
-
-h2, h3, h4, h5, h6 {
-    color: #564256;
-}
-
-section h1 {
-    color: #564256;
+    padding-bottom: 1em;
 }
 
 main {
@@ -72,20 +59,35 @@ main {
 }
 
 .intro {
-    padding-top: 6.5em;
+    padding-top: 9em;
 }
 
 section {
     padding: 1em;
-    padding-bottom: 1.5em;
-    border: solid #DDD1C7 2px;
-    background-color: #DDD1C7;
-    border-radius: 0.5em;
 }
 
 footer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
     background-color: #564256;
     color: #DDD1C7;
     padding: 1em;
-    text-align: center;
+    justify-content: space-around;
+}
+
+footer h2 {
+    color: #DDD1C7;
+    font-size: 16px;
+}
+
+.menu-btn {
+    color: #DDD1C7;
+    font-size: 26px;
+    cursor: pointer;
+    display: none;
+}
+
+@media (max-width: 1000px) {
 }
