--- a/download/style.css
+++ b/download/style.css
@@ -8,6 +8,26 @@ h2, h3, h4, h5, h6 {
     color: #564256;
 }
 
+h2 {
+ font-size: 24px;
+}
+
+h3 {
+ font-size: 19px;
+}
+
+h4 {
+    font-size: 16px;
+}
+
+h5 {
+    font-size: 13px;
+}
+
+h6 {
+    font-size: 10px;
+   }
+
 section h1 {
     color: #564256;
 }
